# gsn_site

./: .gitignore  Procfile  README.md  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
config/: settings.py  urls.py
core/: admin.py  models.py  urls.py  views.py
core/management/commands/: createsu.py  import_photos.py
core/migrations/: 0001_initial.py  0002_projectphoto_delete_application_delete_project_and_more.py  0003_project_projectimage_delete_projectphoto.py  0004_faq.py  0005_project_show_on_projects_page.py
core/static/core/css/: style.css
staticfiles/core/css/: style.css
templates/: base.html  home.html  projects_gallery.html  черновик
